Fixed minor bugs on mobile view

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -27,7 +27,7 @@
 
 .card-container p {
     color: #ffffff;
-    font-size: 12px;
+    font-size: 14px;
     opacity: 0.7;
 }
 
@@ -37,7 +37,7 @@
 	    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	    transition: 0.3s;
 	    color: black;
-	    height: 305px;
+	    height: 340px;
 	    width: 200px;
 	  	background-color: #1d2a26;
 	  	border-radius: 10px;
